DNA 911: fix spacing for icons and item tool links, and within format facet and modal

--- a/app/assets/stylesheets/cornell/_item-record.css.scss
+++ b/app/assets/stylesheets/cornell/_item-record.css.scss
@@ -108,9 +108,6 @@ dd.blacklight-notes {
 		float: left;
 		margin-right: 2em;
 	}
-	.icon-li {
-		left: -1.8em;
-	}
 	li:last-child {
 		margin-right: 0;
 	}
@@ -126,6 +123,7 @@ dd.blacklight-notes {
 			font-size: 1em;
 		}
 	}
+	i { margin-right: 3px; }
 }
 
 .item-pagination {
